--- a/recovery/root/vendor.samsung.hardware.sysinput@1.3-service.rc
+++ b/recovery/root/vendor.samsung.hardware.sysinput@1.3-service.rc
@@ -1,19 +1,9 @@
-on post-fs-data
-    # Touch Panel
-    # chmod 0664 /dev/touch
-    chown root diag /sys/module/tpd_setting/parameters/tpd_calmat
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_debounce_time
-    chown root diag /sys/module/tpd_setting/parameters/tpd_mode
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_debounce_time0
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_debounce_time1
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_spl_num
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_pressure_threshold
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_auto_time_interval
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_sample_cnt
-    chown root diag /sys/module/tpd_setting/parameters/tpd_em_asamp
-    chown root diag /sys/module/tpd_debug/parameters/tpd_em_log
-    chown root diag /sys/module/tpd_debug/parameters/tpd_em_log_to_fs
-
+on init
+    # Create the mountpoint for mnt/vendor partitions
+    mkdir /sys/class/sec 0771 root root
+    restorecon_recursive /sys/class/sec/tsp
+    restorecon /sys/class/sec/tsp/cmd
+    write /sys/class/sec/tsp/cmd aot_enable,1
 
 # file permission
 on early-boot
